--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
     "host": "vite --host"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.0.1",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
-    "react-router-dom": "^6.26.1"
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.26.1",
+    "redux-persist": "^6.0.0",
+    "sonner": "^1.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
